--- a/pom.xml
+++ b/pom.xml
@@ -144,5 +144,11 @@
             </plugin>
         </plugins>
     </build>
+    <developers>
+      <developer>
+        <name> Jão</name>
+        <email>jdoe@example.com </email>
+      </developer>
+    </developers>
 
 </project>
